fix: update responsiveness style on iphone 5s

--- a/src/scss/components/_checkbox.scss
+++ b/src/scss/components/_checkbox.scss
@@ -1,6 +1,10 @@
 .checkbox {
   font-size: rem(11px);
 
+  @include breakpoint((max-width 320px, max-height 568px)) {
+    font-size: rem(10px);
+  }
+
   input {
     @include visually-hidden();
   }
