--- a/src/scss/modules/_data.scss
+++ b/src/scss/modules/_data.scss
@@ -16,6 +16,10 @@
     width: 100%;
     text-align: left;
     padding-top: 10px;
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      max-width: 200px;
+    }
   }
 
   &__field-title {
@@ -23,6 +27,10 @@
     font-size: rem(13px);
     font-weight: 500;
     margin-bottom: 5px;
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      font-size: rem(11px);
+    }
   }
 
   &__field {
@@ -33,9 +41,17 @@
       margin-bottom: 30px;
     }
 
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      margin-bottom: 20px;
+    }
+
     &:last-child {
       @include breakpoint((max-width 500px, max-height 650px)) {
         margin-bottom: 15px;
+      }
+
+      @include breakpoint((max-width 320px, max-height 568px)) {
+        margin-bottom: 10px;
       }
     }
 
@@ -55,6 +71,11 @@
         top: 65px;
       }
 
+      @include breakpoint((max-width 320px, max-height 568px)) {
+        font-size: rem(8px);
+        top: 55px;
+      }
+
       span {
         display: inline-flex;
         justify-content: center;
@@ -66,11 +87,21 @@
         border-radius: 1px;
         background-color: #FFFFFF;
         font-weight: 600;
+
+        @include breakpoint((max-width 320px, max-height 568px)) {
+          height: 10px;
+          width: 10px;
+          font-size: rem(6px);
+        }
       }
     }
   }
 
   .button {
-    margin-bottom: 19px;
+    margin-top: 19px;
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      margin-top: 10px;
+    }
   }
 }
