--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -5,6 +5,10 @@
   justify-content: center;
   align-items: center;
 
+  @include breakpoint((max-width 320px, max-height 568px)) {
+    height: 40px;
+  }
+
   &--hidden-logo &__logo {
     display: none;
   }
@@ -13,6 +17,10 @@
 
     img {
       width: 75px;
+
+      @include breakpoint((max-width 320px, max-height 568px)) {
+        width: 60px;
+      }
     }
   }
 
@@ -31,6 +39,10 @@
     @include breakpoint((max-width 500px, max-height 650px)) {
       font-size: rem(12px);
     }
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      left: 10px;
+    }
   }
 
   &__close {
@@ -41,5 +53,9 @@
     top: 50%;
     transform: translateY(-50%);
     right: 12px;
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      right: 10px;
+    }
   }
 }
